[tool.poetry]
name = "python-galaxy"
version = "0.1.0"
description = ""
authors = ["Wilkne Maia <72803395+wilkneMaia@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_galaxy"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
